Solve plane-on-plane bug - add z-index: -100; to clicked items

--- a/main.css
+++ b/main.css
@@ -43,6 +43,7 @@ body {
 
 .clicked {
     opacity: 0.5;
+    z-index: -100;
 }
 
 .fail {
